<resources>
    <string name="app_name">Find@CMU</string>
    <string name="logo">logo</string>
    <string name="cmubackground">cmubackground</string>
    <string name="transparentlayer">transparentlayer</string>
    <string name="official_logo">official_logo</string>
    <string name="whiteoval">whiteoval</string>
    <string name="sign_up">Sign-up</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="login_text">Login</string>
    <string name="cmu_image">cmu_image</string>
    <string name="guest">Guest</string>
    <string name="g">Guest</string>
    <string name="login1">Login</string>
    <string name="curve">curve</string>
    <string name="nigga">nigga</string>
    <string name="bhfind_n_cmu">BHFind\n@CMU</string>
    <string name="bhfind_button">bhfind_button</string>
    <string name="settings">settings</string>
    <string name="sign_up_text">Sign-up</string>
    <string name="username">Username</string>
    <string name="email1">Email</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="clear">Clear</string>
    <string name="profile">Profile</string>
    <string name="settings_drawer_button">Settings</string>
    <string name="logout_drawer_button">Logout</string>
    <string name="profile_butt">Profile</string>
    <string name="logout_butt">Logout</string>
    <string name="settings_butt">Settings</string>
    <string name="profile_button">Profile</string>
    <string name="button">Button</string>
    <string name="logout">Logout</string>
    <string name="image_of_property">image of property</string>
    <string name="message">Message</string>
    <string name="send_message">Send message</string>
    <string name="upload_photos">upload_photos</string>
    <string name="bhfind_mini_logo">logo</string>
    <string name="sample_text">Sample text</string>
    <string name="sample_text_1">Sample Text</string>
    <string name="sample_sent_message">Sample Sent message</string>
    <string name="type_a_message">Type a message</string>
    <string name="sendbutton">sendbutton</string>
    <string name="debug_info">Debug Info</string>
    <string name="return_button">Return</string>
    <string name="return_button_home">Return</string>
    <string name="return_to_home"><![CDATA[<Return]]></string>
    <string name="name">Name:</string>
    <string name="price">Price</string>
    <string name="location">Location:</string>
    <string name="inquire">Inquire</string>
    <string name="return_to_main_menu">Return</string>
    <string name="login_as_landlord">Login as Landlord</string>
    <string name="location_string">Location</string>
    <string name="price_string">Price</string>
    <string name="return_from_chat">Return</string>
    <string name="landlord_tag">Landlord</string>
    <string name="add_property">Add Property</string>
    <string name="profilepic">profilepic</string>
    <string name="llusername">Username:</string>
    <string name="lllocation">Location:</string>
    <string name="llemail">Email:</string>
    <string name="property_name">Property Name:</string>
    <string name="pricing">Pricing:</string>
    <string name="property_location">Location:</string>
    <string name="other_description">Other description:</string>
    <string name="submit">Submit</string>
    <string name="chatDesc">chat</string>
    <string name="properties">Properties</string>
</resources>