<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="0dp">

        <!-- Top Green Header with Logo and Menu -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#144D1B">

            <ImageView
                android:id="@+id/menuIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.1"
                android:contentDescription="@string/cmu_image"
                android:src="@drawable/cmu"
                android:layout_alignParentEnd="true"
                android:layout_margin="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="450dp"
                    android:layout_height="450dp"
                    android:contentDescription="@string/official_logo"
                    android:src="@drawable/updatedfind" />


            </LinearLayout>
        </RelativeLayout>
        <!-- Login Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/semi_oval"
            android:contentDescription="@string/curve"
            android:textSize="69sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/sign_up_text"
            android:layout_gravity="center"
            android:textColor="#144D1B"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="24dp" />

        <!--Input Fields-->
        <EditText
            android:id="@+id/landlord_username"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:autofillHints="Username"
            android:hint="@string/username"
            android:backgroundTint="#D6DED1"
            android:padding="12dp"
            android:background="@drawable/rounded_edittext" />

        <EditText
            android:id="@+id/landlord_email"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:autofillHints="Email"
            android:hint="@string/email1"
            android:inputType="textEmailAddress"
            android:backgroundTint="#D6DED1"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext" />

        <EditText
            android:id="@+id/landlord_password_input"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="#D6DED1"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext" />

        <EditText
            android:id="@+id/landlord_confirm_password_input"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:autofillHints="reenter_password"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:backgroundTint="#D6DED1"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext" />

        <EditText
            android:id="@+id/landlord_location"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:autofillHints="reenter_password"
            android:hint="@string/location_string"
            android:inputType="text"
            android:backgroundTint="#D6DED1"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/landlord_clear_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                android:background="@drawable/red_rounded_button"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/landlord_sign_up_button_id"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
