<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="0dp">

            <!-- Top Green Header with Logo and Menu -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#144D1B">

                <ImageView
                    android:id="@+id/menuIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.1"
                    android:contentDescription="@string/cmu_image"
                    android:src="@drawable/cmu"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="0dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:layout_width="450dp"
                        android:layout_height="450dp"
                        android:contentDescription="@string/official_logo"
                        android:src="@drawable/updatedfind" />


                </LinearLayout>
            </RelativeLayout>
            <!-- Login Section -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/semi_oval"
                android:contentDescription="@string/curve"
                android:layout_gravity="center"
                android:layout_marginTop="-50dp"
                android:layout_marginBottom="24dp" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/gotoprofile"
                    android:text="@string/profile_button"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_button"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:text="@string/button"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_button"
                    tools:ignore="ButtonStyle"/>

                <Button
                    android:id="@+id/logoutbutton"
                    android:textColor="@color/white"
                    android:text="@string/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    tools:ignore="ButtonStyle"/>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
