<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >

    <!-- Top Header Layout -->
    <RelativeLayout

        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#144D1B">
        <TextView
            android:layout_width="120dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/properties"/>

        <!-- Settings icon -->
        <ImageView
            android:id="@+id/settingsIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/transparentsettings"
            android:contentDescription="@string/settings" />
        <!--Chat Button-->
        <ImageView
            android:id="@+id/chatButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/chatDesc"
            android:focusable="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:src="@android:drawable/stat_notify_chat"/>

    </RelativeLayout>
    <!-- Recycler view here-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerLayout"
        android:orientation="vertical"
        android:padding="16dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/propertyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerLayout"
            android:padding="16dp"
            android:clipToPadding="false"/>
        <Button
            android:id="@+id/add_new_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_property"
            android:background="@drawable/rounded_button"/>
    </LinearLayout>
</RelativeLayout>
